Stop navbar warping by scrollbar

--- a/assets/css/head.css
+++ b/assets/css/head.css
@@ -1,5 +1,8 @@
 ---
 ---
+html{
+	overflow-y: scroll;
+}
 body, html {
 	height: 100%;
 	width: 100%;
